# LMS-Demo

./: .gitignore  .rules  CELERY_SETUP_EXPLANATION.md  CREDENTIAL_ISSUANCE_FLOW.md  CREDENTIAL_ISSUANCE_TROUBLESHOOTING.md  EVERYCRED_CONFIG_FIX.md  EVERYCRED_SETUP_GUIDE.md  INTEGRATION_SUMMARY.md  LOGIN_FLOW_ANALYSIS.md  README.md  RECORD_CREATION_PAYLOAD.json  RECORD_CREATION_PAYLOAD_STANDARD.json  RESPONSIVE_TESTING_CHECKLIST.md  ROUTING_ISSUE_FIX.md  SUBJECT_CREATION_PAYLOAD.json  SUBJECT_CREATION_PAYLOAD_WITHOUT_STATUS.json  SUBJECT_FIELD_MAPPING.md  SUBJECT_PAYLOAD_GUIDE.md  package.json  pnpm-lock.yaml  setup_everycred.py  test_login_flow.sh
app/: layout.tsx  page.tsx
backend/: .dockerignore  .gitkeep  DEPLOYMENT.md  Dockerfile  Makefile  README.md  STAGING_API_PREREQUISITES.md  TROUBLESHOOTING_404.md  alembic.ini  asgi.py  deploy.sh  docker-compose.yml  pyproject.toml
backend/apps/: server.py
backend/config/: aws_config.py  azure_config.py  cors.py  db_config.py  env_config.py  logging_config.py  mail_config.py  microsoft_oauth.py  project_path.py  redis_config.py  session_config.py
backend/core/: exceptions.py  security.py  session.py
backend/core/db/: __init__.py  transactional.py
backend/core/utils/: auth_dependencies.py  constant_variable.py  db_method.py  email_service.py  helper.py  html_to_pdf.py  jwt_hanlder.py  message_variable.py  pagination.py  standard_response.py  validation.py
backend/log_service/: log_service.py
backend/middleware/: session_middleware.py
backend/migrations/: env.py
backend/scripts/: generate_module.py  init-db.sql
(+109 files in other folders)
