[project]
name = "practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiomysql>=0.3.2",
    "alembic>=1.17.2",
    "bcrypt>=5.0.0",
    "fastapi[standard]>=0.128.0",
    "python-jose[cryptography]>=3.3.0",
    "loguru>=0.7.3",
    "marshmallow>=4.2.0",
    "pydantic>=2.12.5",
    "pymysql>=1.1.2",
    "aiosmtplib>=5.0.0",
    "httpx>=0.28.0",
]
